Issue #GRUND-353: Changed navigation visibility breakpoint

--- a/scss/modules/_nav.scss
+++ b/scss/modules/_nav.scss
@@ -30,7 +30,7 @@
   &--links {
     display: none; // Hiding navigation on smaller screens
 
-    @include breakpoint($breakpoint-largedesk) {
+    @include breakpoint($breakpoint-desk) {
       align-items: center;
       display: flex;
       flex-direction: row;
@@ -60,8 +60,8 @@
       display: flex;
       font-size: 1em;
       font-weight: 600;
-      padding-left: 20px;
-      padding-right: 20px;
+      padding-left: 10px;
+      padding-right: 10px;
       text-decoration: none;
       text-transform: uppercase;
 
@@ -91,6 +91,11 @@
       &:hover {
         background-color: $gray-lightest;
       }
+    }
+
+    @include breakpoint($breakpoint-bigscreen) {
+      padding-left: 20px;
+      padding-right: 20px;
     }
   }
 }
